🔨 오류 수정 1차 커밋